# api/work_flow/gzl_app.go
@@ -136,7 +136,7 @@ func (f *AppApi) AddFlow(c *gin.Context) {
 // @Tags App
 // @Summary 启用应用
 // @Produce  application/json
-// @Param data body WorkFlowReq.StartApp true "应用id,是否启用(1不启用默认，2启用)"
+// @Param data body WorkFlowReq.EnableApp true "应用id,是否启用(1不启用默认，2启用)"
 // @Success 200 {string} json "{"success":true,"data":{},"msg":"创建表单成功"}"
 // @Router /app/enable [post]
 func (f *AppApi) EnableApp(c *gin.Context) {
